<?xml version="1.0"?>
<package>
  <name>gaussian_laser_filters</name>
  <version>1.0.0</version>
  <description>laser filters of gs-robot</description>
  <maintainer email="chenkan@gs-robot.com">Cameron</maintainer>
  <license>NO LICENSE</license>

  <export>
    <filters plugin="${prefix}/beam_reverse_filter.xml" />
    <filters plugin="${prefix}/front_safe_filter.xml" />
    <filters plugin="${prefix}/angle_limit_filter.xml" />
    <filters plugin="${prefix}/lms1xx_filter.xml" />
    <filters plugin="${prefix}/single_scan_filter.xml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>gslib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>gslib</run_depend>
</package>
